--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 
 spring.mail.host=smtp.gmail.com
+spring.mail.protocol=smtp
 spring.mail.port=587
 spring.mail.username=artemaber@gmail.com
-spring.mail.password=jrycjgtslequccib
+spring.mail.password=ccpwkkivbrdkllpv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
