--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.url1=jdbc:postgresql://localhost:5432/testDB
+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql=true
 
@@ -21,7 +24,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
-spring.liquibase.enabled=true
+#spring.liquibase.enabled=true
 
 sms.login=ArtemSokolov
 sms.password=ArtemSokolov1!
