--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url1=jdbc:postgresql://localhost:5432/testDB
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
@@ -31,3 +31,9 @@ sms.password=ArtemSokolov1!
 
 bot.username=Artem999Bot
 bot.token=5716309154:AAE8kx699mAkG2_pqlkQOSp-LA_b7nH_Qwc
+spring.uri.file.telegram=C://Users//asokolov//IdeaProjects
+
+
+spring.rabbitmq.host=localhost
+
+spring.sms.service=https://smsc.ru/sys/send.php?login=
